[package]
name = "luks-volume-driver"
version = "0.1.0"
authors = ["richardb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
hyper = "0.12"
hyperlocal = "0.6"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
