[package]
name = "luks-volume-driver"
version = "0.1.0"
authors = ["richardb"]
edition = "2018"

[dependencies]
block-utils = "0.6.2"
clap = "2.33.0"
cryptsetup-rs = "0.2.1"
dd-lib = "0.2.1"
devicemapper = "0.28.0"
hyper = "0.12"
hyperlocal = "0.6"
futures = "0.1"
loopdev = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-mount = "1.2.1"
uuid = { version = "0.7", features = ["v4"] }

[profile.release]
opt-level = "s"