[package]
name = "luks-volume-driver"
version = "0.1.0"
authors = ["richardb"]
edition = "2018"
repository = "https://github.com/richbayliss/docker-luks-volume-plugin"

[dependencies]
actix-http = "0.2.11"
actix-web = { version = "1.0.9", features = ["uds"] }
base64 = "0.11.0"
block-utils = "0.6.2"
bytes = "0.5.2"
clap = "2.33.0"
cryptsetup-rs = { path = "./lib/cryptsetup-rs" }
derive_more = "0.99.2"
futures = "0.1"
futures-util = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.8"
openssl = "0.10.26"
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.3.0"
sys-mount = "1.2.1"
tokio-uds = "0.2"
uuid = { version = "0.7", features = ["v4"] }
url = "2.1.0"

[profile.release]
opt-level = "s"